rust/crates/dsl-core/tests/snapshots/ast_golden__ast_pattern_numeric_args.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 344
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "billing",
                verb: "set-rate",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 26,
                                end: 30,
                            },
                        },
                        span: Span {
                            start: 18,
                            end: 30,
                        },
                    },
                    Argument {
                        key: "basis-points",
                        value: Literal(
                            Integer(
                                25,
                            ),
                            Span {
                                start: 45,
                                end: 47,
                            },
                        ),
                        span: Span {
                            start: 31,
                            end: 47,
                        },
                    },
                    Argument {
                        key: "minimum-fee",
                        value: Literal(
                            Decimal(
                                150.00,
                            ),
                            Span {
                                start: 61,
                                end: 67,
                            },
                        ),
                        span: Span {
                            start: 48,
                            end: 67,
                        },
                    },
                    Argument {
                        key: "currency",
                        value: Literal(
                            String(
                                "GBP",
                            ),
                            Span {
                                start: 78,
                                end: 83,
                            },
                        ),
                        span: Span {
                            start: 68,
                            end: 83,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 84,
                },
            },
        ),
    ],
}
