rust/crates/dsl-core/tests/snapshots/ast_golden__ast_registry_discover.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 278
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "registry",
                verb: "discover-dsl",
                arguments: [
                    Argument {
                        key: "domain",
                        value: Literal(
                            String(
                                "cbu",
                            ),
                            Span {
                                start: 31,
                                end: 36,
                            },
                        ),
                        span: Span {
                            start: 23,
                            end: 36,
                        },
                    },
                    Argument {
                        key: "verb",
                        value: Literal(
                            String(
                                "create",
                            ),
                            Span {
                                start: 43,
                                end: 51,
                            },
                        ),
                        span: Span {
                            start: 37,
                            end: 51,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 52,
                },
            },
        ),
    ],
}
