rust/crates/dsl-core/tests/snapshots/ast_golden__ast_registry_list.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 285
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "registry",
                verb: "list",
                arguments: [
                    Argument {
                        key: "kind",
                        value: Literal(
                            String(
                                "attribute",
                            ),
                            Span {
                                start: 21,
                                end: 32,
                            },
                        ),
                        span: Span {
                            start: 15,
                            end: 32,
                        },
                    },
                    Argument {
                        key: "limit",
                        value: Literal(
                            Integer(
                                50,
                            ),
                            Span {
                                start: 40,
                                end: 42,
                            },
                        ),
                        span: Span {
                            start: 33,
                            end: 42,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 43,
                },
            },
        ),
    ],
}
