rust/crates/dsl-core/tests/snapshots/ast_golden__ast_screening_adverse_media.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 153
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "screening",
                verb: "adverse-media",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 36,
                                end: 43,
                            },
                        },
                        span: Span {
                            start: 25,
                            end: 43,
                        },
                    },
                    Argument {
                        key: "depth",
                        value: Literal(
                            String(
                                "full",
                            ),
                            Span {
                                start: 51,
                                end: 57,
                            },
                        ),
                        span: Span {
                            start: 44,
                            end: 57,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 58,
                },
            },
        ),
    ],
}
