rust/crates/dsl-core/tests/snapshots/ast_golden__ast_session_undo.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 246
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "session",
                verb: "undo",
                arguments: [],
                binding: None,
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
        ),
    ],
}
